--- a/lastochkinognezdo.css
+++ b/lastochkinognezdo.css
@@ -14,6 +14,7 @@ a{
 	display: flex;
 	justify-content: center ;
 	margin: 10px;
+	border-radius: 10px;
 }
 a:hover{
 	background-color: #60B9CF;
@@ -28,3 +29,4 @@ p{
 	display: flex;
 	flex-wrap: wrap;
 }
+
